# loom

./: .gitignore  CMakeLists.txt  README.md  loom.ini  run_transitmap.sh
cmake/: FindGurobi.cmake
data/map/: ub.geojson  ub_roads.kml  ub_roads_green.geojson  ub_roads_primary.geojson  ub_roads_primary.kml  ub_roads_simple.geojson
examples/: 5shar.json  7buudal.json  landmarks.txt  mubis.json  park.json  test.json  ulaanbaatar_landmark_names.txt  ulaanbaatar_landmarks.txt
src/gtfs2graph/builder/: Builder.cpp  Builder.h
src/gtfs2graph/config/: ConfigReader.cpp
src/gtfs2graph/graph/: EdgePL.cpp  EdgeTripGeom.cpp  EdgeTripGeom.h  NodePL.cpp  NodePL.h
src/gtfs2graph/tests/: TestMain.cpp
src/loom/config/: ConfigReader.cpp
src/loom/optim/: OptGraph.cpp
src/octi/config/: ConfigReader.cpp
src/shared/: CMakeLists.txt
src/shared/linegraph/: LineGraph.cpp  LineGraph.h  LineNodePL.cpp  LineNodePL.h
src/shared/optim/: COINSolver.cpp
src/shared/rendergraph/: Landmark.h  RenderGraph.cpp  RenderGraph.h
src/topo/config/: ConfigReader.cpp
src/topo/mapconstructor/: MapConstructor.cpp
src/transitmap/: CMakeLists.txt  TransitMapMain.cpp
src/transitmap/config/: ConfigReader.cpp  TransitMapConfig.h
src/transitmap/graph/: GraphBuilder.cpp  GraphBuilder.h
src/transitmap/label/: CMakeLists.txt  Labeller.cpp  Labeller.h  tt_norms_pro_regular.h
src/transitmap/output/: MvtRenderer.cpp  MvtRenderer.h  SvgRenderer.cpp  SvgRenderer.h
src/transitmap/tests/: ArrowHeadDirectionTest.cpp  ArrowHeadDirectionTest.h  BgMapTest.cpp  BgMapTest.h  CMakeLists.txt  ConfigParseTest.cpp  ConfigParseTest.h  DirMarkerTest.cpp  DirMarkerTest.h  DropOverlappingStationsTest.cpp  DropOverlappingStationsTest.h  InnerGeomLaneOrderTest.cpp  InnerGeomLaneOrderTest.h  LabelPenaltyTest.cpp  LabelPenaltyTest.h  LandmarkDisplacementTest.cpp  LandmarkDisplacementTest.h  LandmarkProjectionTest.cpp  LandmarkProjectionTest.h  LandmarkSizeTest.cpp  LandmarkSizeTest.h  MeBadgeCollisionTest.cpp  MeBadgeCollisionTest.h  MeBadgeRotationTest.cpp  MeBadgeRotationTest.h  MeBadgeSizingTest.cpp  MeBadgeSizingTest.h  MeHighlightDisplacementTest.cpp  MeHighlightDisplacementTest.h  SanitizeSvgTest.cpp  SanitizeSvgTest.h  SingleRouteLabelTest.cpp  SingleRouteLabelTest.h  StationFarCrowdTest.cpp  StationFarCrowdTest.h  StationLabelOptimizerTest.cpp  StationLabelOptimizerTest.h  TerminusLabelPlacementTest.cpp  TerminusLabelPlacementTest.h  TerminusReverseTest.cpp  (+2 more)
src/transitmap/util/: String.h
src/util/: Misc.h  String.h
src/util/geo/: BezierCurve.tpp  Box.h  CircularSegment.tpp  Geo.h  Grid.h  PolyLine.h  PolyLine.tpp  Polygon.h  QuadTree.h  RTree.h
src/util/geo/output/: GeoJsonOutput.tpp
src/util/graph/: BiDijkstra.h  Dijkstra.h  EDijkstra.h  Graph.h  Node.h  ShortestPath.h
src/util/http/: Server.cpp  Server.h
src/util/json/: Writer.cpp  Writer.h
src/util/log/: Log.cpp  Log.h
src/util/tests/: CMakeLists.txt  TestMain.cpp
src/util/xml/: XmlWriter.cpp  XmlWriter.h
